Fixed Home layout issues. Fixed loading To-Do Groups. Corrected layout breakpoints in navbar.

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -133,17 +133,3 @@
         font-size: 34px;
     }
 }
-
-@media only screen and (min-width: 1366px) {
-    .home-container-heading {
-        height: 425px;
-    }
-    
-    .left-container {
-        min-height: 280px;
-    }
-    
-    .left-container h3 {
-        margin-top: 0px !important;
-    }
-}
