--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,15 +2,16 @@
     height: 82vh;
 }
 
-h4 {
+h2 {
     background-color: #666666;
     color: #fff;
 }
 
 .button-container {
     height: 80%;
-    max-width: 400px;
+    max-width: 450px;
     margin: 0px auto;
+    padding: 1em;
 }
 
 .signout-button {
