--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -66,14 +66,6 @@ h1 {
 }
 
 @media only screen and (min-width: 1025px) {
-    .nav-bar {
-        display: none;
-    }
-
-    .nav-bar-lrg {
-        display: flex;
-    }
-
     .nav-links {
         font-size: 20px;
     }
@@ -112,8 +104,16 @@ h1 {
     }
 }
 
-/* @media only screen and (min-width: 1366px) {
-    .more-items {
-        right: 22%;
+@media only screen and (min-width: 1120px) {
+    .nav-bar {
+        display: none;
     }
-} */
+
+    .nav-bar-lrg {
+        display: flex;
+    }
+
+    .navbar-container {
+        padding: .4em 0px;
+    }
+}
